fix-a11y: change button text to white

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,7 +31,7 @@ import heroImg from "../images/hero.jpg";
       </p>
       <a
         href="/frontend-olexiy-melnychuk-cv.pdf"
-        class="uppercase inline-block rounded-main font-bold py-4 px-12 bg-bittersweet text-white-smoke text-center leading-7"
+        class="uppercase inline-block rounded-main font-bold py-4 px-12 bg-bittersweet text-white text-center leading-7"
         download
         aria-label="Olexiy Melnychuk CV"
       >
