fix-a11y: add aria-label for logo link

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,6 +2,6 @@
 import LogoIcon from "@components/LogoIcon.astro";
 ---
 
-<a href="/" class="inline-block">
+<a href="/" aria-label="Olexiy Melnychuk" class="inline-block">
   <LogoIcon />
 </a>
