--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,10 +9,10 @@ import HeroImage from "../images/hero.jpg";
       class="container max-w-desktop h-full flex flex-col justify-center items-center"
     >
       <h1 class="font-bold text-3xl leading-heading mb-16 text-center">
-        Hello, I’m <span class="text-bittersweet">Olexiy Melnychuk</span>,<br
+        Hello, I’m <span class="text-chestnut">Olexiy Melnychuk</span>,<br
         />Your
-        <span class="text-bittersweet">Passionate</span> Front-end Developer<span
-          class="text-bittersweet">.</span
+        <span class="text-chestnut">Passionate</span> Front-end Developer<span
+          class="text-chestnut">.</span
         >
       </h1>
       <p class="text-xl leading-none mb-16">
@@ -20,9 +20,9 @@ import HeroImage from "../images/hero.jpg";
       </p>
       <a
         href="/frontend-olexiy-melnychuk-cv.pdf"
-        class="uppercase inline-block rounded-main font-bold py-4 px-12 bg-bittersweet text-white text-center leading-7"
-        download
-        aria-label="Olexiy Melnychuk CV"
+        class="uppercase inline-block rounded-main font-bold py-4 px-12 bg-chestnut text-white text-center leading-7"
+        download="/frontend-olexiy-melnychuk-cv.pdf"
+        aria-label="Download CV"
       >
         Download CV</a
       >
@@ -34,7 +34,7 @@ import HeroImage from "../images/hero.jpg";
     <Image
       src={HeroImage}
       class="bg-center object-cover min-h-full bg-dark"
-      sizes=`(min-width: 769px) 100vw, (max-width: 768px)  40vw`
+      sizes=`(min-width: 769px) 100vw, (max-width: 768px) 40vw`
       quality={75}
       alt="Hero"
       fetchpriority="high"
