fix: change hero loading to eager

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,6 +38,7 @@ import HeroImage from "../images/hero.jpg";
       quality={75}
       alt="Hero"
       fetchpriority="high"
+      loading="eager"
     />
   </div>
 </section>
