feat: add project section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
+import Layout from "@layouts/Layout.astro";
+import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Hero from "@components/Hero.astro";
+import Projects from "@components/Projects.astro";
 ---
 
 <Layout title="Olexiy Melnychuk | Front-end Developer">
   <Header />
   <main>
     <Hero />
+    <Projects />
   </main>
   <Footer />
 </Layout>
