fix: made other fixes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,14 @@
-<footer class="bg-dark text-white">
-  <div class="container max-w-desktop">Footer</div>
+---
+import Logo from "@components/Logo.astro";
+---
+
+<footer class="bg-dark text-white py-6">
+  <div class="container max-w-desktop flex justify-normal items-center">
+    <Logo color="white" />
+    <p class="text-center py-9 grow-0 md:grow">
+      {
+        `Copyright © ${new Date().getFullYear()}  Made with love by Olexiy Melnychuk. All rights reserved.`
+      }
+    </p>
+  </div>
 </footer>
