--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,7 +1,9 @@
 ---
 import LogoIcon from "@components/LogoIcon.astro";
+type LogoColor = "black" | "white";
+const { color = "black" } = Astro.props as { color: LogoColor };
 ---
 
-<a href="/" aria-label="Olexiy Melnychuk" class="inline-block">
-  <LogoIcon />
+<a href="/" aria-label="Portfolio">
+  <LogoIcon className="h-14 max-w-full" color={color} />
 </a>
