feat: add skill section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Logo from "@components/Logo.astro";
 <footer class="bg-dark text-white py-6">
   <div class="container max-w-desktop flex justify-normal items-center">
     <Logo color="white" />
-    <p class="text-center py-9 grow-0 md:grow">
+    <p class="text-center text-lg py-9 grow-0 md:grow">
       {
         `Copyright © ${new Date().getFullYear()}  Made with love by Olexiy Melnychuk. All rights reserved.`
       }
