--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import HeroImage from "../images/hero.jpg";
 <section class="relative h-[631px] flex justify-normal" id="hero-section">
   <div class="absolute top-0 left-0 z-20 w-full h-full text-white-smoke">
     <div
-      class="container max-w-desktop h-full flex flex-col justify-center items-center"
+      class="container max-w-desktop h-full flex flex-col text-center justify-center items-center"
     >
       <h1
         class="font-bold xl:text-3xl md:text-2xl text-xl leading-heading mb-16 text-center"
@@ -22,7 +22,7 @@ import HeroImage from "../images/hero.jpg";
       </p>
       <a
         href="/frontend-olexiy-melnychuk-cv.pdf"
-        class="uppercase inline-block rounded-main font-bold py-4 xl:px-12 lg:px-10 px-8 text-md transition-colors hover:text-white hover:bg-bittersweet bg-white text-red-950 text-center leading-7"
+        class="uppercase inline-block rounded-main font-bold py-4 xl:px-12 lg:px-10 px-8 text-md transition-colors hover:text-white hover:bg-bittersweet bg-white text-dark leading-7"
         download="/frontend-olexiy-melnychuk-cv.pdf"
         aria-label="Download CV"
       >
