--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<nav class="px-8 font-bold">
-  <ul class="flex justify-normal lg:gap-20">
+<nav class="px-4 lg:px-8 font-bold">
+  <ul class="flex justify-normal gap-5 md:gap-12 lg:gap-20">
     <li>
       <a href="/" class="transition-colors hover:text-orange">Home</a>
     </li>
