--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -47,7 +47,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     <div class="flex justify-between font-bold text-md mt-9">
       <a
         href={demo}
-        class="bg-bittersweet hover:bg-dark transition-colors text-white rounded px-4 py-1.5"
+        class="bg-indigo hover:bg-dark transition-colors text-white rounded px-4 py-1.5"
         >Live Demo</a
       >
       <a
