--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon";
 ---
 
 <header class="text-lg bg-white-smoke text-dark py-9">
-  <div class="container max-w-desktop flex justify-between">
+  <div class="container max-w-desktop flex justify-between items-center">
     <Logo color="black" />
     <Navbar />
     <Icon width="24" height="24" name="ph:moon-bold" />
