--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Hero from "@components/Hero.astro";
 import Projects from "@components/Projects.astro";
+import Skills from "@components/Skills.astro";
 ---
 
 <Layout title="Olexiy Melnychuk | Front-end Developer">
@@ -11,6 +12,7 @@ import Projects from "@components/Projects.astro";
   <main>
     <Hero />
     <Projects />
+    <Skills />
   </main>
   <Footer />
 </Layout>
