--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -25,7 +25,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
       width={345}
       height={275}
       quality={75}
-      fetchpriority="high"
+      fetchpriority="auto"
       format="webp"
       alt={title}
       src={images[image]()}
