--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,9 +35,11 @@ import HeroImage from "../images/hero.jpg";
   >
     <Image
       src={HeroImage}
-      widths={[1920, 992, 768, 375]}
+      width={HeroImage.width / 1.5}
+      height={HeroImage.height / 1.5}
+      widths={[1280, 768, 375]}
       class="bg-center object-cover h-full min-w-full bg-dark"
-      sizes=`(max-width: 1920px) 1920px, (max-width: 992px) 992px, (max-width: 768px) 768px, (max-width: 375px) 375px, 100vw`
+      sizes=`(max-width: 1920px) 100vw, (max-width: 1280px) 1280px, (max-width: 768px) 768px, (max-width: 375px) 375px, 100vw`
       quality={55}
       alt="Hero"
       fetchpriority="high"
