--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,10 +15,40 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <style>
+      @font-face {
+        font-family: "Lato";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wXg.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+      @font-face {
+        font-family: "Lato";
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh6UVSwiPGQ.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+      html {
+        font-family: "Lato", sans-serif;
+        scroll-behavior: smooth;
+      }
+      body {
+        position: relative;
+        overflow-x: hidden;
+        min-width: 320px;
+        line-height: 1.625;
+      }
+    </style>
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -26,15 +56,3 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
-<style is:global>
-  html {
-    font-family: "Lato", sans-serif;
-    scroll-behavior: smooth;
-  }
-  body {
-    position: relative;
-    overflow-x: hidden;
-    min-width: 320px;
-    line-height: 1.625;
-  }
-</style>
