perf: add loading eager to hero image

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,6 +42,7 @@ import HeroImage from "../images/hero.jpg";
       sizes=`(max-width: 1920px) 100vw, (max-width: 1280px) 1280px, (max-width: 768px) 768px, (max-width: 375px) 375px, 100vw`
       quality={55}
       alt="Hero"
+      loading={"eager"}
       fetchpriority="high"
     />
   </div>
