--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Footer from "@components/Footer.astro";
 import Hero from "@components/Hero.astro";
 import Projects from "@components/Projects.astro";
 import Skills from "@components/Skills.astro";
+import Contact from "@components/Contact.astro";
 ---
 
 <Layout title="Olexiy Melnychuk | Front-end Developer">
@@ -13,6 +14,7 @@ import Skills from "@components/Skills.astro";
     <Hero />
     <Projects />
     <Skills />
+    <Contact />
   </main>
   <Footer />
 </Layout>
