feat: add theme toogler

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,13 @@
 ---
 import Logo from "@components/Logo.astro";
 import Navbar from "@components/Navbar.astro";
-import { Icon } from "astro-icon";
+import ThemeButton from "@components/ThemeButton.astro";
 ---
 
 <header class="text-lg bg-white-smoke text-dark py-9">
   <div class="container max-w-desktop flex justify-between items-center">
     <Logo color="black" />
     <Navbar />
-    <Icon width="24" height="24" name="ph:moon-bold" />
+    <ThemeButton />
   </div>
 </header>
