--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,12 +1,14 @@
 ---
 import ContactForm from "@components/ContactForm.astro";
 import Circle from "@components/Circle.astro";
+import Socials from "@components/Socials.astro";
 ---
 
 <section id="contact" class="py-24 relative bg-linen overflow-hidden">
   <div class="container max-w-desktop lg:px-32 md:px-16 px-4 relative z-30">
     <h2 class="text-2xl font-bold mb-12 uppercase text-center">Contact Me</h2>
     <ContactForm />
+    <Socials />
   </div>
   <Circle
     diameter={252}
