--- a/src/components/ThemeButton.astro
+++ b/src/components/ThemeButton.astro
@@ -1,10 +1,10 @@
 ---
-import Icon from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <button id="theme-toggle">
-  <Icon width="24" height="24" name="ph:moon-bold" class="dark:hidden" />
-  <Icon width="24" height="24" name="ph:sun-bold" class="hidden dark:block" />
+  <Icon width={24} height={24} name="ph:moon-bold" class="dark:hidden" />
+  <Icon width={24} height={24} name="ph:sun-bold" class="hidden dark:block" />
 </button>
 
 <script is:inline>
