--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,9 @@ import Navbar from "@components/Navbar.astro";
 import ThemeButton from "@components/ThemeButton.astro";
 ---
 
-<header class="text-lg bg-white-smoke text-dark py-9">
+<header
+  class="text-lg bg-white-smoke sticky z-50 w-full top-0 dark:bg-dark dark:text-white-smoke text-dark py-9"
+>
   <div class="container max-w-desktop flex justify-between items-center">
     <Logo color="black" />
     <Navbar />
