--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@ import HeroImage from "../images/hero.jpg";
       </p>
       <a
         href="/frontend-olexiy-melnychuk-cv.pdf"
-        class="uppercase inline-block rounded-main font-bold py-4 xl:px-12 lg:px-10 px-8 text-md transition-colors hover:text-white hover:bg-bittersweet bg-white text-dark leading-7"
+        class="uppercase inline-block dark:bg-transparent dark:hover:bg-white-smoke dark:border-white-smoke dark:hover:text-dark dark:text-white-smoke border-2 border-transparent rounded-main font-bold py-4 xl:px-12 lg:px-10 px-8 text-md transition-colors hover:text-white hover:bg-bittersweet bg-white text-dark leading-7"
         download="/frontend-olexiy-melnychuk-cv.pdf"
         aria-label="Download CV"
       >
