--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,10 @@ import { projects } from "../data/projects.json";
 import Circle from "@components/Circle.astro";
 ---
 
-<section id="projects" class="py-24 relative bg-white-smoke overflow-hidden">
+<section
+  id="projects"
+  class="py-24 relative bg-white-smoke dark:bg-black dark:text-white-smoke overflow-hidden"
+>
   <div class="container max-w-desktop relative z-30">
     <h2 class="text-2xl font-bold mb-12 uppercase text-center">Projects</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
