--- a/src/components/ThemeButton.astro
+++ b/src/components/ThemeButton.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<button id="theme-toggle">
+<button id="theme-toggle" aria-label="Toggle theme">
   <Icon width={24} height={24} name="ph:moon-bold" class="dark:hidden" />
   <Icon width={24} height={24} name="ph:sun-bold" class="hidden dark:block" />
 </button>
