--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -19,7 +19,9 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 );
 ---
 
-<div class="bg-white flex flex-col rounded shadow-main">
+<div
+  class="bg-white dark:bg-dark dark:text-white flex flex-col rounded shadow-main"
+>
   <div class="w-full">
     <Image
       width={345}
@@ -52,7 +54,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
       >
       <a
         href={github}
-        class="bg-transparent text-black rounded underline hover:no-underline underline-offset-4 px-4 py-1.5"
+        class="bg-transparent text-black dark:text-white rounded underline hover:no-underline underline-offset-4 px-4 py-1.5"
         >Github</a
       >
     </div>
