--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -11,8 +11,10 @@ export interface SkillCardProps {
 const { title, description, icon } = Astro.props as SkillCardProps;
 ---
 
-<div class="bg-white items-center flex flex-col px-8 py-7 rounded">
-  <Icon name={icon} width={64} height={64} />
+<div
+  class="bg-white dark:bg-black dark:text-white items-center flex flex-col px-8 py-7 rounded"
+>
+  <Icon name={icon} width={64} height={64} class="dark:fill-white" />
   <h3 class="text-lg mt-8 mb-4 font-bold text-center">{title}</h3>
   <p class="text-center font-normal text-lg">{description}</p>
 </div>
