--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,17 @@ const { title } = Astro.props;
         min-width: 320px;
         line-height: 1.625;
       }
+
+      *::-webkit-scrollbar {
+        @apply h-0 w-2;
+      }
+
+      *::-webkit-scrollbar-track {
+        @apply bg-transparent;
+      }
+      *::-webkit-scrollbar-thumb {
+        @apply bg-bittersweet rounded;
+      }
     </style>
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
