feat: add smooth scroll

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import HeroImage from "../images/hero.jpg";
 ---
 
-<section class="relative h-[631px] flex justify-normal" id="hero-section">
+<section class="relative h-[631px] flex justify-normal" id="home">
   <div class="absolute top-0 left-0 z-20 w-full h-full text-white-smoke">
     <div
       class="container max-w-desktop h-full flex flex-col text-center justify-center items-center"
