--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -5,5 +5,5 @@ const { color = "black" } = Astro.props as { color: LogoColor };
 ---
 
 <a href="/" aria-label="Portfolio">
-  <LogoIcon className="h-14 max-w-full" color={color} />
+  <LogoIcon className="h-14 max-w-full relative z-50" color={color} />
 </a>
