--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,8 +1,34 @@
 ---
+import SendGrid from "@sendgrid/mail";
+SendGrid.setApiKey(import.meta.env.SENDGRID_API_KEY);
 
+if (Astro.request.method === "POST") {
+  try {
+    const data = await Astro.request.formData();
+    const name = data.get("name");
+    const surname = data.get("surname");
+    const phone = data.get("phone");
+    const email = data.get("email");
+    const message = data.get("message");
+
+    const msg = {
+      to: import.meta.env.RECIPIENT_EMAIL_ADDRESS as string,
+      from: "alexa_11111@ukr.net",
+      subject: `Message from ${name} ${surname}`,
+      text: message,
+      html: `<strong>Name: </strong>${name}<br><strong>Surname: </strong>${surname}<br><strong>Phone: </strong>${phone}<br><strong>Email: </strong>${email}<br><strong>Message: </strong>${message}`,
+    };
+
+    await SendGrid.send(msg as any)
+      .then(() => console.log("Message sent"))
+      .catch((error) => console.error(error));
+  } catch (error) {
+    console.error(error);
+  }
+}
 ---
 
-<form action="" id="contact-form" class="w-full flex flex-col gap-6">
+<form method="post" id="contact-form" class="w-full flex flex-col gap-6">
   <div class="w-full flex flex-col md:flex-row gap-5">
     <input
       type="text"
@@ -26,6 +52,7 @@
     placeholder="Phone number..."
     class="h-16 w-full px-8 border-transparent invalid:outline-red-500 autofill:text-orange dark:text-white bg-white rounded dark:bg-dark dark:placeholder:text-white-smoke"
     autocomplete="off"
+    required
   />
   <input
     type="email"
@@ -59,3 +86,11 @@
     >
   </div>
 </form>
+
+<script>
+  const form = document.getElementById("contact-form") as HTMLFormElement;
+  form.addEventListener("submit", (event) => {
+    event.preventDefault();
+    form.submit();
+  });
+</script>
