--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -70,15 +70,15 @@ if (Astro.request.method === "POST") {
     required
     autocomplete="off"></textarea>
 
-  <div class="inline-flex gap-5 justify-start">
+  <div class="flex flex-col md:flex-row gap-5 justify-start">
     <button
       type="submit"
-      class="h-16 px-8 w-96 uppercase border-transparent border-2 font-bold text-md inline-block text-center bg-indigo transition-colors hover:border-indigo hover:text-indigo hover:bg-transparent text-white rounded"
+      class="h-16 px-3 md:px-8 w-full md:w-96 uppercase border-transparent border-2 font-bold text-md inline-block text-center bg-indigo transition-colors hover:border-indigo hover:text-indigo hover:bg-transparent text-white rounded"
       >Send Message</button
     >
     <a
       href="/frontend-olexiy-melnychuk-cv.pdf"
-      class="uppercase inline-block rounded-main text-center font-bold py-4 xl:px-12 lg:px-10 px-8 text-md transition-colors w-96 bg-transparent underline hover:no-underline text-dark leading-7"
+      class="uppercase inline-block rounded-main text-center font-bold py-4 xl:px-12 lg:px-10 px-4 text-md transition-colors md:w-96 bg-transparent underline hover:no-underline text-dark leading-7"
       download="/frontend-olexiy-melnychuk-cv.pdf"
       aria-label="Download CV"
     >
