fix: add line-height to here paragraph

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import HeroImage from "../images/hero.jpg";
           class="text-bittersweet">.</span
         >
       </h1>
-      <p class="xl:text-xl md:text-md leading-none mb-16">
+      <p class="xl:text-xl md:text-md leading-relaxed mb-16">
         Help creating intuitive and dynamic user experiences for the web.
       </p>
       <a
