fix: style issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@ import Logo from "@components/Logo.astro";
 ---
 
 <footer class="bg-dark text-white py-6">
-  <div class="container max-w-desktop flex justify-normal items-center">
+  <div
+    class="container max-w-desktop flex flex-col md:flex-row justify-normal items-center"
+  >
     <Logo color="white" />
     <p class="text-center text-lg py-9 grow-0 md:grow">
       {
