--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -19,9 +19,9 @@ interface Social {
           href={social.url}
           target="_blank"
           rel="noopener noreferrer"
-          class="inline-flex gap-x-7 items-center text-dark hover:text-bittersweet transition-colors text-lg"
+          class="inline-flex gap-x-2 md:gap-x-7 items-center text-dark hover:text-bittersweet transition-colors text-md md:text-lg"
         >
-          <Icon name={social.icon} width={36} height={36} />
+          <Icon name={social.icon} width={32} height={32} />
           {social.text}
         </a>
       </li>
