fix: make bigger h1 font for lg-screen

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import HeroImage from "../images/hero.jpg";
       class="container max-w-desktop h-full flex flex-col text-center justify-center items-center"
     >
       <h1
-        class="font-bold xl:text-3xl md:text-2xl text-xl leading-heading mb-16 text-center"
+        class="font-bold xl:text-3xl lg:text-[56px] md:text-2xl text-xl leading-heading mb-16 text-center"
       >
         Hello, I’m <span class="text-bittersweet">Olexiy Melnychuk</span>,<br
         />Your
